objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contract Loading</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Destination Services</fullName>
        <description>Destination Services Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EEM Activations %26 Training</fullName>
        <description>EEM Activations &amp; Training</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for Expedia MM%2FAM</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for chain%2Fvendor</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EVC - SR</fullName>
        <description>Intended for EVC - SR Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Financial Operations</fullName>
        <description>Financial Operations</description>
        <isActive>true</isActive>
        <values>
            <fullName>365 Pending FinOps Approval</fullName>
        </values>
        <values>
            <fullName>365 Pending PSG Approval</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Information Received</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold Pending Info</fullName>
        </values>
        <values>
            <fullName>Pending Car Ops</fullName>
        </values>
        <values>
            <fullName>Pending EPay access</fullName>
        </values>
        <values>
            <fullName>Pending FinOps UAT</fullName>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>SR Supervisor</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Vendor on Hold</fullName>
        </values>
        <values>
            <fullName>Work in Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Geography</fullName>
        <description>Geography Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Under Investigation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HDM</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Name Change Declined</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Closed - Watch</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Health %26 Safety</fullName>
        <description>Health &amp; Safety</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Argent</fullName>
        </values>
        <values>
            <fullName>Pending MM</fullName>
        </values>
        <values>
            <fullName>Pending Supplier</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Hotel Systems Technical Support</fullName>
        <description>Hotel Support Technical Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for Expedia MM%2FAM</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for RAID%2FJira</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for chain%2Fvendor</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for property</fullName>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for resource</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Id Request</fullName>
        <description>Contract Loading</description>
        <isActive>true</isActive>
        <values>
            <fullName>Additional Information Required</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On hold %E2%80%93 waiting for Expedia MM%2FAM</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Localisation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Internal Information</fullName>
        </values>
        <values>
            <fullName>Waiting for Property%2FVendor Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lodging Content</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Internal Information</fullName>
        </values>
        <values>
            <fullName>Waiting for Property%2FVendor Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lodging Operations - HPS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lodging Operations PAC%2C SAM</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending MM</fullName>
        </values>
        <values>
            <fullName>Pending Response</fullName>
        </values>
        <values>
            <fullName>Pending Supplier</fullName>
        </values>
        <values>
            <fullName>Re-open</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Media %2F Virtual Tours</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Star Ratings</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Closed - Watch</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Request</fullName>
        <description>Used by GSO team to handle support requests from business teams</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Reply</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply%3A Customer Email</fullName>
        </values>
        <values>
            <fullName>Waiting for Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Transport</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Response</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>User Generated Content</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate Case</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting for Internal Information</fullName>
        </values>
        <values>
            <fullName>Waiting for Property%2FVendor Information</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accounting_Assigned_To__c</fullName>
        <label>Accounting Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_By_Market_Manager_Date__c</fullName>
        <description>Date tracking when property was activated by a market manager</description>
        <label>Activated By Market Manager Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>Date tracking when property was activated</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Type__c</fullName>
        <description>Tracks the type of activation required to get property active</description>
        <label>Activation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activation Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Training Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Used to store additional information from a case. Can be used as a merge field on an email template.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Status__c</fullName>
        <inlineHelpText>This is only required for certain Statuses</inlineHelpText>
        <label>Additional Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotwire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWW eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWW Site Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Team - Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Team - Ticketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Team - CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Work Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answered Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External (non-SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Cust. Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjusted_Case_Age__c</fullName>
        <description>Formula calculates the running time a case has been open. If the case has been closed, it calculates the difference between opened and closed dates. NOTE: Meter begins counting one day AFTER case was opened.</description>
        <formula>if( IsClosed =FALSE, (TODAY()-(datevalue(CreatedDate))), ( datevalue(ClosedDate) - (datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The difference between the current date and the date the case was opened. If the case has been closed, the difference is between the closed date and opened date.</inlineHelpText>
        <label>Adjusted Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <picklist>
            <picklistValues>
                <fullName>365</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Tax Rate Loading Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Rate/Promo/Tax/Cxl Loading Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Rate Loading Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Checkout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escheat-Historical Thru 12/02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Did Stay at Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Was Moved to This Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Waived Reversed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Breakage Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Adjustment Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Confirmed Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paying Balance Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rack Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Diff/Promo Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Model__c</fullName>
        <description>Expedia selling model</description>
        <label>Agency Model</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if a case has been allocated to another team</description>
        <inlineHelpText>Used to indicate if a case has been allocated to another team</inlineHelpText>
        <label>Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_in_USD__c</fullName>
        <label>Approved Amount in USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Availability_Entered_Date__c</fullName>
        <description>Date tracking when Availability was entered</description>
        <label>Availability Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Lookup__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>A list to choose Expedia.com (E*), Hotels.com (H*), or both</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>E*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <description>Primarily used for Air CPR, hopefully other teams can re-use this if needed.</description>
        <label>Business Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Policy_Received_Date__c</fullName>
        <description>Date tracking when cancellation policy was received</description>
        <label>Cancellation Policy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_Fare_Filed_Date__c</fullName>
        <label>Carrier Fare Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_days__c</fullName>
        <formula>IF(IsClosed,ClosedDate-CreatedDate,NOW()-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>